--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
 </head>
 <body>
   <div class="navbar-container">
-    <ul id="list">
+    <ul class="navbar">
       <li><a href="#" class="navbartext"> Gmail </a> </li>
       <li><a href="#" class="navbartext"> Images</a> </li>
-      <li> <a href="#" class="navbarimage"><img src="http://www.myiconfinder.com/uploads/iconsets/256-256-f6227d477e683ae5bd1270aac11b93e5-grid.png" width="15em" height="15em"> </a></div> </li>
-      <li> <a href="#" class="navbarimage"> <img src="https://cdn3.iconfinder.com/data/icons/glypho-phones-and-communication/64/bell-circle-512.png"width="20em" height="20em" id="image"></a></div></li>
-
+      <li> <a href="#" class="navbarimage"><img src="http://www.myiconfinder.com/uploads/iconsets/256-256-f6227d477e683ae5bd1270aac11b93e5-grid.png" width="15em" height="15em"> </a> </li>
+      <li> <a href="#" class="navbarimage"> <img src="https://cdn3.iconfinder.com/data/icons/glypho-phones-and-communication/64/bell-circle-512.png"width="20em" height="20em" id="image"></a></li>
     </ul>
+  </div>
+  <div class="main-container">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/2000px-Google_2015_logo.svg.png" height="15%" width="25%">
+    <form>
+      <input type="text" value="Search google or type in URL" size="70">
+    </form>
+     <div class="button"><a href="#" class="button-text"> Google Search</a></div>
+     <div class="button"><a href="#" class="button-text"> Im Feeling Lucky</a> </div>
   </div>
 </body>
 </html>
