--- a/index.html
+++ b/index.html
@@ -18,8 +18,27 @@
     <form>
       <input type="text" value="Search google or type in URL" size="70">
     </form>
-     <div class="button"><a href="#" class="button-text"> Google Search</a></div>
-     <div class="button"><a href="#" class="button-text"> Im Feeling Lucky</a> </div>
+     <button class="button">Google Search </button>
+     <button class="button">Im Feeling Lucky </button>
   </div>
+  <div class="bigdiv">
+  <div class="footer">
+  <div class="firstListContainer">
+  <ul class="firstList">
+    <li> <a href="#"> Advertising </a></li>
+    <li> <a href="#"> Business </a> </li>
+    <li> <a href="#"> About </a> </li>
+  </ul>
+  </div>
+  <div class="secondListContainer">
+    <ul class="firstList">
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><a href="#"> Settings</a></li>
+    </ul>
+  </div>
+</div>
+</div>
+
 </body>
 </html>
